Horrible instructions but I managed

--- a/MvcMovie/appsettings.json
+++ b/MvcMovie/appsettings.json
@@ -1,8 +1,11 @@
-﻿{
+{
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "MvcMovieContext": "Server=(localdb)\\mssqllocaldb;Database=MvcMovieContext-9e799409-8afd-49b1-aa68-fa9d844c65d3;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
